--- a/lesson14/timer-express-ts/tsconfig.json
+++ b/lesson14/timer-express-ts/tsconfig.json
@@ -14,6 +14,13 @@
     "rootDir": "src",
     "outDir": "dist",
 
+
+    "module": "ESNext",
+    "moduleResolution": "node",
+    "verbatimModuleSyntax": false,
+
+
+
     "esModuleInterop": true,
     // For nodejs:
     // "lib": ["esnext"],
