--- a/lesson14/timer-express-ts/tsconfig.json
+++ b/lesson14/timer-express-ts/tsconfig.json
@@ -15,7 +15,7 @@
     "outDir": "dist",
 
 
-    "module": "ESNext",
+    //"module": "ESNext",
     "moduleResolution": "node",
     "verbatimModuleSyntax": false,
 
@@ -47,10 +47,12 @@
     // Recommended Options
     "strict": true,
     "jsx": "react-jsx",
-    "verbatimModuleSyntax": true,
+    //"verbatimModuleSyntax": true,
     "isolatedModules": true,
     "noUncheckedSideEffectImports": true,
     "moduleDetection": "force",
     "skipLibCheck": true,
-  }
+  },
+  "include": ["src/**/*"],
+  "exclude": ["node_modules", "dist"]
 }
