--- a/lesson14/timer-express-ts/package.json
+++ b/lesson14/timer-express-ts/package.json
@@ -5,6 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
+    "build": "tsc && cp -r src/public dist/",
     "watch": "tsc -w",
     "dev": "nodemon --inspect dist/index.js",
     "init-db": "node dist/init-db.js"
